# puzzicle

./: .gitignore  README.md  build-python-local-install.xml  build.xml  cli.py  pyproject.toml  renderpuz.py  requirements-dev.txt  requirements.txt
examples/: __init__.py  example_5x5.py  example_7x7.py  example_9x9.py  example_9x9_dict.py
puzio/: __init__.py  cli.py  editing.py  filling.py  puzrender.py  rendering.py  showing.py
puzzicle/puzio/: __init__.py  editing.py  filling.py  qxw.py  reading.py  rendering.py  showing.py
puzzicle/puzzicon/: __init__.py  grid.py  listmaker.py
puzzicle/puzzicon/fill/: __init__.py  bank.py  filler.py  state.py
puzzicle/tests/: __init__.py  test_editing.py  test_install.py  test_puzio.py  test_puzzicon.py  test_puzzicon_fill.py  test_puzzicon_fill_bank.py  test_puzzicon_fill_filler.py  test_puzzicon_grid.py  test_puzzicon_listmaker.py  test_reading.py  test_rendering.py  test_showing.py
puzzicle/tests/examples/: __init__.py  example_7x7.py
puzzicle/tests/puzio/: test_qxw.py
puzzicle/tests/testdata/: 2x2-with-darks.qxw  autofill-9x9.qxw  basic-2x2.qxw  mini-5x4.qxw  normal.puz
puzzicon/: __init__.py  fill.py  grid.py  listmaker.py
puzzicon/fill/: __init__.py  bank.py  filler.py  state.py
testdata/: a-1x1.qxw  a-dark-1x1.qxw  autofill-9x9-answers.txt  autofill-9x9.ans.txt  blank-1x1.qxw  dark-1x1.qxw  letter-in-black.qxw  normal-clues.txt  normal.qxw  unches-clues.txt  unches.qxw
tests/: __init__.py  test_common.py  test_editing.py  test_filler.py  test_puzio.py  test_puzzicon.py  test_puzzicon_fill.py  test_puzzicon_fill_bank.py  test_puzzicon_fill_filler.py  test_puzzicon_grid.py  test_puzzicon_listmaker.py  test_rendering.py
